_docs/v0.59/embedding/sdk/api/snippets/InteractiveDashboardProps.md
---
version: v0.59
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: InteractiveDashboardProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/InteractiveDashboardProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                              | Type                                                                                                                                                                                                                                                                                                       | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| :-------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| <a id="autorefreshinterval"></a> `autoRefreshInterval?`               | `number`                                                                                                                                                                                                                                                                                                   | The interval between auto refreshes on the dashboard, in seconds.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| <a id="classname"></a> `className?`                                   | `string`                                                                                                                                                                                                                                                                                                   | A custom class name to be added to the root element.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| <a id="dashboardid"></a> `dashboardId`                                | `string` \| `number`                                                                                                                                                                                                                                                                                       | The ID of the dashboard. <br/> This is either: <br/> - the numerical ID when accessing a dashboard link, i.e. `http://localhost:3000/dashboard/1-my-dashboard` where the ID is `1` <br/> - the string ID found in the `entity_id` key of the dashboard object when using the API directly or using the SDK Collection Browser to return data                                                                                                                                                                                                                                                                                                                                                                             |
| <a id="datapickerprops"></a> `dataPickerProps?`                       | [`Pick`](https://www.typescriptlang.org/docs/handbook/utility-types.html#picktype-keys)\<[`SdkQuestionProps`](./api/SdkQuestionProps), `"entityTypes"`\>                                                                                                                                                | Additional props to pass to the query builder rendered by `InteractiveQuestion` when creating a new dashboard question.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| <a id="drillthroughquestionheight"></a> `drillThroughQuestionHeight?` | `Height`\<`string` \| `number`\>                                                                                                                                                                                                                                                                           | Height of a question component when drilled from the dashboard to a question level.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| <a id="drillthroughquestionprops"></a> `drillThroughQuestionProps?`   | [`DrillThroughQuestionProps`](./api/DrillThroughQuestionProps)                                                                                                                                                                                                                                          | Props of a question component when drilled from the dashboard to a question level.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| <a id="enableentitynavigation"></a> `enableEntityNavigation?`         | `boolean`                                                                                                                                                                                                                                                                                                  | When true, internal click behaviors (links to dashboards/questions) are preserved. When false (default for SDK), these click behaviors are filtered out.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| <a id="hiddenparameters"></a> `hiddenParameters?`                     | `string`[]                                                                                                                                                                                                                                                                                                 | A list of [parameters to hide](/docs/v0.59/embedding/public-links#appearance-parameters). <br/> - Combining [initialParameters](./api/InteractiveDashboardProps#initialparameters) and [hiddenParameters](./api/InteractiveDashboardProps#hiddenparameters) to filter data on the frontend is a [security risk](/docs/v0.59/embedding/sdk/authentication#security-warning-each-end-user-must-have-their-own-metabase-account). <br/> - Combining [initialParameters](./api/InteractiveDashboardProps#initialparameters) and [hiddenParameters](./api/InteractiveDashboardProps#hiddenparameters) to declutter the user interface is fine.        |
| <a id="initialparameters"></a> `initialParameters?`                   | [`ParameterValues`](./api/ParameterValues)                                                                                                                                                                                                                                                              | Query parameters for the dashboard. For a single option, use a `string` value, and use a list of strings for multiple options. <br/> - Combining [initialParameters](./api/InteractiveDashboardProps#initialparameters) and [hiddenParameters](./api/InteractiveDashboardProps#hiddenparameters) to filter data on the frontend is a [security risk](/docs/v0.59/embedding/sdk/authentication#security-warning-each-end-user-must-have-their-own-metabase-account). <br/> - Combining [initialParameters](./api/InteractiveDashboardProps#initialparameters) and [hiddenParameters](./api/InteractiveDashboardProps#hiddenparameters) to declutter the user interface is fine. |
| <a id="onload"></a> `onLoad?`                                         | (`dashboard`: `null` \| [`MetabaseDashboard`](./api/MetabaseDashboard)) => `void`                                                                                                                                                                                                                       | Callback that is called when the dashboard is loaded.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| <a id="onloadwithoutcards"></a> `onLoadWithoutCards?`                 | (`dashboard`: `null` \| [`MetabaseDashboard`](./api/MetabaseDashboard)) => `void`                                                                                                                                                                                                                       | Callback that is called when the dashboard is loaded without cards.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| <a id="onvisualizationchange"></a> `onVisualizationChange?`           | (`visualization`: \| `"object"` \| `"table"` \| `"bar"` \| `"line"` \| `"pie"` \| `"scalar"` \| `"row"` \| `"area"` \| `"combo"` \| `"pivot"` \| `"smartscalar"` \| `"gauge"` \| `"progress"` \| `"funnel"` \| `"map"` \| `"scatter"` \| `"boxplot"` \| `"waterfall"` \| `"sankey"` \| `"list"`) => `void` | A callback function that triggers when a question is opened from a dashboard card or when the user changes the visualization type of a question.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| <a id="plugins"></a> `plugins?`                                       | [`MetabasePluginsConfig`](./api/MetabasePluginsConfig)                                                                                                                                                                                                                                                  | Additional mapper function to override or add drill-down menu. See the implementing custom actions section for more details.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| <a id="renderdrillthroughquestion"></a> `renderDrillThroughQuestion?` | () => [`ReactNode`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L478)                                                                                                                                                          | A custom React component to render the question layout. Use namespaced InteractiveQuestion components to build the layout.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| <a id="style"></a> `style?`                                           | [`CSSProperties`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L2579)                                                                                                                                                           | A custom style object to be added to the root element.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| <a id="token"></a> `token?`                                           | `null` \| `string`                                                                                                                                                                                                                                                                                         | -                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| <a id="withcardtitle"></a> `withCardTitle?`                           | `boolean`                                                                                                                                                                                                                                                                                                  | Whether the dashboard cards should display a title.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| <a id="withdownloads"></a> `withDownloads?`                           | `boolean`                                                                                                                                                                                                                                                                                                  | Whether to hide the download button.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| <a id="withsubscriptions"></a> `withSubscriptions?`                   | `boolean`                                                                                                                                                                                                                                                                                                  | Whether to show the subscriptions button.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| <a id="withtitle"></a> `withTitle?`                                   | `boolean`                                                                                                                                                                                                                                                                                                  | Whether the dashboard should display a title.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |

<!-- [<endsnippet properties>] -->
